<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/plate"
        android:layout_width="318dp"
        android:layout_height="172dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="490dp"
        android:layout_marginEnd="11dp"
        android:contentDescription="@string/plate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/plate_edited" />

    <ImageView
        android:id="@+id/apple1"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="575dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="96dp"
        android:contentDescription="@string/plate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/apple" />

    <ImageView
        android:id="@+id/apple2"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="575dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="96dp"
        android:contentDescription="@string/plate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/apple" />

    <ImageView
        android:id="@+id/apple3"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="575dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="96dp"
        android:contentDescription="@string/plate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/apple" />

    <ImageView
        android:id="@+id/apple4"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="575dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="96dp"
        android:contentDescription="@string/plate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/apple" />

    <ImageView
        android:id="@+id/apple5"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="575dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="96dp"
        android:contentDescription="@string/plate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/apple" />

    <ImageView
        android:id="@+id/apple6"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginTop="575dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/plate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        app:srcCompat="@drawable/apple" />

    <ImageView
        android:id="@+id/apple7"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="575dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/plate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/apple" />

    <ImageView
        android:id="@+id/apple8"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="575dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/plate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/apple" />

    <ImageView
        android:id="@+id/apple9"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="575dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/plate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/apple" />

    <ImageView
        android:id="@+id/apple10"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="575dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/plate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47000003"
        app:srcCompat="@drawable/apple" />

    <TextView
        android:id="@+id/bgbutton"
        android:layout_width="416dp"
        android:layout_height="275dp"
        android:background="#374C4344"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/Button0"
        android:layout_width="81dp"
        android:layout_height="100dp"
        android:layout_marginStart="2dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/Button0"
        android:onClick="button0Click"
        android:padding="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/number0" />

    <ImageButton
        android:id="@+id/Button1"
        android:layout_width="81dp"
        android:layout_height="100dp"
        android:layout_marginTop="1dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/Button1"
        android:onClick="button1Click"
        android:padding="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/Button0"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/number1" />

    <ImageButton
        android:id="@+id/Button2"
        android:layout_width="81dp"
        android:layout_height="100dp"
        android:layout_marginTop="1dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/Button2"
        android:onClick="button2Click"
        android:padding="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/Button1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/number2" />

    <ImageButton
        android:id="@+id/Button3"
        android:layout_width="81dp"
        android:layout_height="100dp"
        android:layout_marginTop="1dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/Button3"
        android:onClick="button3Click"
        android:padding="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/Button2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/number3" />

    <ImageButton
        android:id="@+id/Button4"
        android:layout_width="85dp"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/Button4"
        android:onClick="button4Click"
        android:padding="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/Button3"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/number4" />

    <ImageButton
        android:id="@+id/Button5"
        android:layout_width="76dp"
        android:layout_height="102dp"
        android:layout_marginStart="2dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/Button5"
        android:onClick="button5Click"
        android:padding="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button0"
        app:srcCompat="@drawable/number5" />

    <ImageButton
        android:id="@+id/Button6"
        android:layout_width="81dp"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/Button6"
        android:onClick="button6Click"
        android:padding="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/Button5"
        app:layout_constraintTop_toBottomOf="@+id/Button1"
        app:srcCompat="@drawable/number6" />

    <ImageButton
        android:id="@+id/Button7"
        android:layout_width="81dp"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/Button7"
        android:onClick="button7Click"
        android:padding="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/Button6"
        app:layout_constraintTop_toBottomOf="@+id/Button2"
        app:srcCompat="@drawable/number7" />

    <ImageButton
        android:id="@+id/Button8"
        android:layout_width="81dp"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/Button8"
        android:onClick="button8Click"
        android:padding="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/Button7"
        app:layout_constraintTop_toBottomOf="@+id/Button3"
        app:srcCompat="@drawable/number8" />

    <ImageButton
        android:id="@+id/Button9"
        android:layout_width="85dp"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/Button9"
        android:onClick="button9Click"
        android:padding="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/Button8"
        app:layout_constraintTop_toBottomOf="@+id/Button4"
        app:srcCompat="@drawable/number9" />

    <TextView
        android:id="@+id/ques"
        android:layout_width="314dp"
        android:layout_height="69dp"
        android:layout_marginStart="2dp"
        android:adjustViewBounds="true"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:textColor="#090909"
        android:textSize="60sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button6" />

    <TextView
        android:id="@+id/resultTest"
        android:layout_width="96dp"
        android:layout_height="69dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/resultTest"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:textColor="#090909"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button9" />

    <TextView
        android:id="@+id/bgChange"
        android:layout_width="413dp"
        android:layout_height="728dp"
        android:background="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Button2" />

    <ImageView
        android:id="@+id/star"
        android:layout_width="191dp"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:padding="10dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/star_kids" />

    <ImageView
        android:id="@+id/star3"
        android:layout_width="164dp"
        android:layout_height="242dp"
        android:adjustViewBounds="true"
        android:padding="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/star_kids" />

    <ImageView
        android:id="@+id/img3"
        android:layout_width="201dp"
        android:layout_height="245dp"
        android:adjustViewBounds="true"
        android:padding="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/emoji1" />

    <ImageView
        android:id="@+id/img2"
        android:layout_width="197dp"
        android:layout_height="205dp"
        android:adjustViewBounds="true"
        android:padding="10dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/emoji1" />

    <ImageButton
        android:id="@+id/playAgain"
        android:layout_width="161dp"
        android:layout_height="123dp"
        android:adjustViewBounds="true"
        android:background="#00FFFFFF"
        android:onClick="playAgain"
        android:padding="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/plate"
        app:layout_constraintEnd_toEndOf="@+id/apple4"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/apple2"
        app:layout_constraintTop_toBottomOf="@+id/resultTest"
        app:layout_constraintVertical_bias="0.19999999"
        app:srcCompat="@drawable/play_again" />

    <TextView
        android:id="@+id/showF"
        android:layout_width="311dp"
        android:layout_height="57dp"
        android:adjustViewBounds="true"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:textColor="#6CBA5A"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="@+id/plate"
        app:layout_constraintTop_toBottomOf="@+id/Button7" />

    <ImageView
        android:id="@+id/updir"
        android:layout_width="103dp"
        android:layout_height="112dp"
        android:adjustViewBounds="true"
        android:padding="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="@+id/apple3"
        app:layout_constraintTop_toBottomOf="@+id/playAgain"
        app:srcCompat="@drawable/updir" />

</androidx.constraintlayout.widget.ConstraintLayout>